--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -1,40 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script type="text/javascript" src="examplePage.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body class="background">
-    <header class="header" id="header">
-        <div class="site-title">
-            <a class="header_home" href="index.html">Example App</a>
-        </div>
-    </header>
-    <div class="card">
-        <h2>Create Example</h2>
-        <form class="card-content" id="create-form">
-            <p class="form-field">
-                <label>Name</label>
-                <input type="text" required class="validated-field" id="create-name-field">
-            </p>
-            <button type="submit">Create</button>
-        </form>
+<header class="header" id="header">
+    <div class="site-title">
+        <a class="header_home" href="employee-portal.html">WELCOME TO LBC COFFEE!</a>
     </div>
-    <div class="card">
-        <h2>Get By ID</h2>
-        <form class="card-content" id="get-by-id-form">
-            <p class="form-field">
-                <label>ID</label>
-                <input type="text" required class="validated-field" id="id-field">
-            </p>
-            <button type="submit">Get</button>
-        </form>
+    <div>
+        <a href="index.html"><button><h3>Home</h3></button></a>
     </div>
-    <div class="card" id="result">
-        <h2>Result:</h2>
-        <p id="result-info"></p>
+</header>
+<div class="emp-portal-center-card">
+    <div class="index-links">
+        <a class="index-menu-button" href="menu.html"><button>View Drink Menu</button></a>
+        <a class="portal-button" href="employee-portal.html"><button>Employee Portal</button></a>
     </div>
-
+</div>
 </body>
 </html>
