saving changes without the tests

--- a/Frontend/src/employee-portal.html
+++ b/Frontend/src/employee-portal.html
@@ -7,16 +7,17 @@
 <body class="background">
 <header class="header" id="header">
     <div class="site-title">
-        <a class="header_home" href="employee-portal.html">WELCOME TO CAPSTONE COFFEE!</a>
+        <a class="header_home" href="employee-portal.html">EMPLOYEE PORTAL</a>
     </div>
     <div>
         <a href="index.html"><button><h3>Home</h3></button></a>
     </div>
 </header>
 <div class="emp-portal-center-card">
-    <div class="index-links">
-        <a class="index-menu-button" href="menu.html"><button>View Drink Menu</button></a>
-        <a class="portal-button" href="employee-portal.html"><button>Employee Portal</button></a>
+    <div class="portal-links">
+        <a class="portal-button" href="barista-menu.html"><button>Barista Menu</button></a>
+        <a class="portal-button" href="menu-management.html"><button>Menu Management</button></a>
+        <a class="portal-button" href="inventory-management.html"><button>Inventory Management</button></a>
     </div>
 </div>
 </body>
