--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <title>Welcome to Capstone Coffee Inventory!</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body class="background">
-<header class="header" id="header">
-    <div class="site-title">
-        <a class="header_home" href="employee-portal.html">WELCOME TO CAPSTONE COFFEE!</a>
-    </div>
-    <div>
-        <a href="index.html"><button><h3>Home</h3></button></a>
-    </div>
+<header class="header">
+    <h1 class="site-title">WELCOME TO CAPSTONE COFFEE INVENTORY!</h1>
 </header>
-<div class="emp-portal-center-card">
-    <div class="index-links">
-        <a class="index-menu-button" href="menu.html"><button>View Drink Menu</button></a>
-        <a class="portal-button" href="employee-portal.html"><button>Employee Portal</button></a>
-    </div>
-</div>
+
+    <main class="center-card">
+        <div class="index-links">
+            <a class="button" href="menu.html"><span>View Drink Menu</span></a>
+            <a class="button" href="employee-portal.html"><span>Employee Portal</span></a>
+        </div>
+    </main>
 </body>
 </html>
