--- a/Frontend/src/employee-portal.html
+++ b/Frontend/src/employee-portal.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <title>Employee Portal</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="pages/employeePortalPage.js" defer></script>
 </head>
 <body class="background">
-<header class="header" id="header">
-    <div class="site-title">
-        <a class="header_home" href="employee-portal.html">EMPLOYEE PORTAL</a>
-    </div>
-    <div>
-        <a href="index.html"><button><h3>Home</h3></button></a>
-    </div>
-</header>
-<div class="emp-portal-center-card">
-    <div class="portal-links">
-        <a class="portal-button" href="barista-menu.html"><button>Barista Menu</button></a>
-        <a class="portal-button" href="menu-management.html"><button>Menu Management</button></a>
-        <a class="portal-button" href="inventory-management.html"><button>Inventory Management</button></a>
-    </div>
-</div>
+    <header class="header" id="header">
+        <h1 class="site-title">EMPLOYEE PORTAL</h1>
+        <nav class="nav-links">
+            <a class="home-button" href="index.html">Home</a>
+        </nav>
+    </header>
+
+    <main class="center-card">
+        <div class="index-links">
+            <a class="button" href="barista-menu.html"><span>Barista Menu</span></a>
+            <a class="button" href="menu-management.html"><span>Menu Management</span></a>
+            <a class="button" href="inventory-management.html"><span>Inventory Management</span></a>
+        </div>
+    </main>
 </body>
 </html>
