--- a/Frontend/src/menu.html
+++ b/Frontend/src/menu.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <script type="text/javascript" src="menuPage.js"></script>
+    <title>Coffee Menu</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body class="background">
-<header class="header" id="header">
-    <div class="site-title">
-        <a class="header_home" href="index.html">CAPSTONE COFFEE</a>
-        <p><br></p>
-    </div>
-</header>
-<div class="center-card">
-    <h2 class="menu-header">MENU</h2>
-    <div>
-        <p id="menu-content"></p>
-    </div>
-</div>
+    <header class="header">
+        <h1 class="site-title">COFFEE MENU</h1>
+        <nav class="nav-links">
+            <a class="home-button" href="index.html">Home</a>
+        </nav>
+    </header>
+
+    <main class="center-card">
+        <h2 class="menu-header">MENU</h2>
+        <div id="menu-content"></div>
+    </main>
+
+    <script type="text/javascript" src="menuPage.js"></script>
 </body>
 </html>
